# miaou

./: .gitignore  .tarpaulin.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITIQUE.md  CRITIQUE_CLAUDE.md  CRITIQUE_COMPILEE.md  Cargo.toml  DEPENDENCIES.md  GLOSSAIRE.md  IDEA.md  ISSUE_4_DEMO.md  README.md  README_TEST_LAN.md  ROADMAP.md  SHELL_SCRIPTS.md  WEBSITE_STACK.md  audit_sync_v020.sh  audit_sync_v020_v2.sh  audit_sync_v020_v3.sh  audit_sync_v020_v4.sh  cobertura.xml  coverage_check.sh  create_all_milestones.sh  deny.toml  example_p2p.rs  idea.md  miaou_v_0_2_0_→_v_0_3.rs  milestones.json  mutants.toml  refactor.sh  tarpaulin-report.html  tarpaulin_20250827133521.json  test_cli_mdns_integration.sh  test_e2e_dht.sh  test_e2e_messaging.sh  test_e2e_net_connect.sh  test_mdns_demo.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/: README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cargo-deny.yml  ci-cd.yml  ci.yml  dependency-review.yml  multi-platform.yml  security-audit.yml  version-ci.yml
benches/: crypto_bench.rs  crypto_benchmarks.rs
crates/cli/: Cargo.toml
crates/cli/miaou_messages/: messages.json
crates/cli/src/: comprehensive_command_tests.rs  coverage_maximizer_tests.rs  error_path_tests.rs  integration_smoke_tests.rs  main.rs  match_branch_tests.rs  net_connect_tests.rs  production_changes_tests.rs  production_messaging_tests.rs  structured_commands_tests.rs  v2_integration_tests.rs  webrtc_integration_tests.rs
crates/cli/tests/: integration.rs  net_handshake_integration.rs  net_list_peers_integration.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/keyring/: Cargo.toml
crates/keyring/src/: lib.rs
crates/network/: Cargo.toml
crates/network/examples/: mdns_roundtrip.rs
crates/network/src/: connection.rs  crypto_production_impl.rs  dht.rs  dht_production_impl.rs  directory.rs  discovery.rs  double_ratchet_production.rs  e2e_integration_production.rs  error.rs  handshake.rs  handshake_production.rs  lib.rs  mdns_discovery.rs  mdns_robustness_tests.rs  message_queue.rs  message_queue_production.rs  messaging.rs  nat_traversal.rs  nat_traversal_production.rs  p2p_connection.rs  p2p_messaging_production.rs  peer.rs  ratchet.rs  robust_messaging.rs  store.rs  transport.rs  unified_discovery.rs  webrtc_data_channels.rs  webrtc_production_impl.rs  webrtc_production_real.rs  webrtc_transport.rs
crates/network/tests/: README_E2E.md  dht_kademlia_integration.rs  e2e_discovery_connect_send_ack.rs  e2e_real_webrtc_datachannels.rs  issue_7_acceptance_test.rs  issue_7_robust_messaging_tdd.rs  issue_7_simple_tdd.rs  solid_principles.rs  webrtc_real_datachannel_e2e.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CLI_GUIDE.md  CLI_NET_LIST_PEERS.md  CODE_DOC_RECONCILIATION.md  CONTRIBUTING.md  CRITIQUE_CLAUDE.md  DEPENDENCIES.md  GIT_WORKFLOW.md  GLOSSAIRE.md  IDEA.md  MOBILE.md  QUICK_START_DEVELOPER.md  ROADMAP.md  SCRIPTS.md  SECURITY.md  V0.2.0_RELEASE_CHECKLIST.md  V0.2.0_STATUS_RECONCILIATION.md  V0.2.0_ÉTAT_RÉEL.md  V0.3.0_TRANSITION_PLAN.md  WEBSITE_STACK.md  WORKSPACE_STATUS.md  webrtc-implementation.md
docs/versions/: v0.1.0-premiere-griffe-gpt5.md  v0.1.0-premiere-griffe.md  v0.2.0-radar-moustaches-gpt5.md  v0.2.0-radar-moustaches-production.md  v0.2.0-radar-moustaches.md  v0.3.0-ronron-bonheur.md  v0.4.0-toilettage-royal.md  v0.5.0-chat-gouttiere.md  v0.6.0-neuf-vies.md  v1.0.0-matou-majestueux.md
miaou-cli/: Cargo.toml
miaou-cli/src/: main.rs
miaou-cli/tests/: cli_smoke.rs
miaou-core/: Cargo.toml
miaou-core/src/: lib.rs  mobile.rs  storage.rs
miaou-core/tests/: storage_contract.rs
miaou-crypto/: Cargo.toml
miaou-crypto/benches/: crypto_benchmarks.rs
miaou-crypto/src/: aead.rs  encryption.rs  hash.rs  hashing.rs  kdf.rs  lib.rs  mod.rs  primitives.rs  sign.rs  signing.rs
miaou-crypto/tests/: crypto_errors.rs
miaou_messages/: messages.json
mutants.out/: lock.json  mutants.json  outcomes.json
mutants.out/diff/: src__main.rs_line_5_col_5.diff
scripts/: README.md  build-targets.sh  fix_regex_dups.sh  generate_glossary_html.py  generate_mdbook.sh  generate_website.sh  glossaire.html  hardening.sh  pre-commit.sh  refactor.sh  setup-git-hooks.sh
src/: core.rs  lib.rs  main.rs  mobile.rs
src/crypto/: aead.rs  hashing.rs  kdf.rs  keyring.rs  mod.rs  primitives.rs  sign.rs
templates/: README_VERSION.md  rustdoc_template.rs
test_instance_alice/miaou_messages/: messages.json
test_instance_bob/miaou_messages/: messages.json
tests/crypto/: basic_tests.rs  integration_tests.rs  known_answer_tests.rs  mod.rs  property_tests.rs
web/: index.html  package-lock.json  package.json
