[workspace]
members = [
    "miaou-crypto",
    "miaou-core", 
    "miaou-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yrbane <yrbane@nethttp.net>"]
repository = "https://github.com/yrbane/miaou"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Cryptographic dependencies (shared across crates)
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake3 = { version = "1", features = ["zeroize"] }
argon2 = "0.5"
hkdf = "0.12"
sha3 = "0.10"

# Security and utilities
zeroize = "1.7"
subtle = "2.5"
secrecy = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"
anyhow = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
home = "0.5"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

# Transport layer
rustls = { version = "0.23", default-features = true }

# Development dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3.5"

# Legacy main package for compatibility
[package]
name = "miaou"
version = "0.1.0"
edition = "2021"
authors = ["yrbane <yrbane@nethttp.net>"]
description = "Plateforme de communication décentralisée et sécurisée"
repository = "https://github.com/yrbane/miaou"
license = "MIT OR Apache-2.0"
keywords = ["p2p", "encryption", "communication", "decentralized"]
categories = ["network-programming", "cryptography"]

[lib]
name = "miaou"
crate-type = ["cdylib", "rlib"]

# Removed legacy bin target to avoid conflicts

[dependencies]
# Re-export modular crates
miaou-core = { path = "miaou-core" }
miaou-crypto = { path = "miaou-crypto" }

# Additional dependencies for legacy compatibility tests
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["desktop"]
desktop = []
mobile = []
android = ["mobile"]
ios = ["mobile"]
wasm = []

[package.metadata.android]
package = "net.nethttp.miaou"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "i686-linux-android", "x86_64-linux-android"]

[package.metadata.bundle]
name = "Miaou"
identifier = "net.nethttp.miaou"
version = "0.1.0"
copyright = "Copyright (c) yrbane 2024"
category = "social-networking"
short_description = "Communication décentralisée"
long_description = "Plateforme de communication peer-to-peer sécurisée et décentralisée"

# Tests et dev
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3.5"
secrecy = { version = "0.8", features = ["serde"] }

[[bench]]
name = "crypto_bench"
harness = false

# Support multi-plateforme optimisé
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies] 
objc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# Optimisations de compilation par target
[profile.release]
opt-level = 3
lto = "thin" 
panic = "abort"
codegen-units = 1
strip = true

[profile.release-mobile]
inherits = "release"
opt-level = "z"  # Optimisation taille pour mobile
panic = "abort"

[profile.release-wasm]
inherits = "release" 
opt-level = "s"  # Optimisation taille pour WASM
panic = "abort"