[workspace]
members = [
    "crates/core",
    "crates/crypto",
    "crates/keyring",
    "crates/cli",
]
resolver = "2"
 
[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
 
[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }
 
[workspace.lints.clippy]
pedantic = "deny"
all = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
 
[workspace.dependencies]
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.10"
rand = "0.8"
rand_core = "0.6"
clap = { version = "4", features = ["derive"] }
# Crypto deps
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
aead = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = { version = "1", features = ["pure"] }
argon2 = "0.5"

# WASM-specific deps
getrandom = { version = "0.2", features = ["js"] }

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-mobile]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true