[workspace]
members = [
    "crates/core",
    "crates/crypto",
    "crates/keyring",
    "crates/network",
    "crates/cli",
]
resolver = "2"
 
[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yrbane/miaou"
readme = "README.md"
keywords = ["miaou", "cryptography", "security", "cli", "p2p"]
categories = ["cryptography", "command-line-utilities"]
description = "Miaou: secure primitives, keyring and CLI foundation"
[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "deny", priority = -1 }
 
[workspace.lints.clippy]
pedantic = "deny"
all = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
 
[workspace.dependencies]
regex = "1.10.6"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.10"
rand = "0.9"
rand_core = "0.6"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
# Crypto deps
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
aead = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = { version = "1", features = ["pure"] }
argon2 = "0.5"

# WASM-specific deps
getrandom = { version = "0.2", features = ["js"] }

# Network discovery deps
mdns-sd = "0.11"

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-mobile]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
