[package]
name = "miaou-core"
version = "0.1.0"
edition = "2021"
authors = ["yrbane <yrbane@nethttp.net>"]
description = "Core functionality for Miaou decentralized communication platform"
repository = "https://github.com/yrbane/miaou"
license = "MIT OR Apache-2.0"
keywords = ["p2p", "encryption", "communication", "decentralized"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Re-export crypto dependencies
miaou-crypto = { path = "../miaou-crypto" }

# Serialization and utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand_core = { version = "0.6", features = ["getrandom"] }

# Password hashing
argon2 = "0.5"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

# Security
secrecy = "0.8"
zeroize = "1.7"

# Android JNI (conditionally compiled)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# Configuration spécifique WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# Pour WASM, utiliser tokio avec runtime minimal compatible
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["desktop"]
desktop = []
mobile = []
android = ["mobile"]
ios = ["mobile"]
wasm = []

[dev-dependencies]
tempfile = "3.5"