[package]
name = "miaou-crypto"
version = "0.1.0"
edition = "2021"
authors = ["yrbane <yrbane@nethttp.net>"]
description = "Cryptographic primitives for Miaou decentralized communication platform"
repository = "https://github.com/yrbane/miaou"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "encryption", "signatures", "security"]
categories = ["cryptography"]

[dependencies]
# Stack cryptographique cohérente (Option A : RustCrypto + Dalek)
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }

# Signatures et ECDH via Dalek
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

# KDF et hachage
hkdf = "0.12"
blake3 = { version = "1", features = ["zeroize"] }
sha3 = "0.10"
argon2 = "0.5"

# Sécurité et gestion des secrets
zeroize = "1.7"
subtle = "2.5"
secrecy = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"

# Sérialisation et utilitaires
serde = { version = "1", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3.5"

[[bench]]
name = "crypto_benchmarks"
harness = false