[package]
name = "miaou-cli"
version = "0.1.0"
edition = "2021"

description.workspace = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true
 
[dependencies]
ed25519-dalek = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
miaou-core = { path = "../core" }
miaou-crypto = { path = "../crypto" }
miaou-keyring = { path = "../keyring" }
serde_json = { workspace = true }
