[package]
name = "miaou-cli"
version = "0.2.0"
edition = "2021"

description.workspace = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true
 
[dependencies]
ed25519-dalek = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt", "macros"] }
miaou-core = { path = "../core" }
miaou-crypto = { path = "../crypto" }
miaou-keyring = { path = "../keyring" }
miaou-network = { path = "../network", features = ["webrtc-transport"] }
serde_json = { workspace = true }
hex = "0.4"
rand = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
