[package]
name = "miaou-crypto"
version = "0.1.0"
edition = "2021"

description.workspace = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true
 
[dependencies]
miaou-core = { path = "../core" }
aead = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
 
[dev-dependencies]
rand = { workspace = true }