[package]
name = "miaou-keyring"
version = "0.1.0"
edition = "2021"
 
[dependencies]
miaou-core = { path = "../core" }
miaou-crypto = { path = "../crypto" }
argon2 = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde_bytes = "0.11"
getrandom = { workspace = true }