[package]
name = "miaou-network"
version = "0.2.0"
edition = "2021"

description.workspace = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true
keywords.workspace    = true
categories.workspace  = true

[dependencies]
miaou-core = { path = "../core" }
miaou-crypto = { path = "../crypto" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Networking
webrtc = { version = "0.12", optional = true }
mdns-sd = { workspace = true, optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
serde_bytes = "0.11"
bincode = "1.3"

# Crypto for handshake
x25519-dalek = { version = "2.0", features = ["serde", "zeroize", "static_secrets"] }
ed25519-dalek = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
chacha20poly1305 = { workspace = true }
aead = { workspace = true }
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
hex = "0.4"
chrono = "0.4"
fastrand = "2.0"
blake3 = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Pour les exemples
rand = { workspace = true }

[features]
default = ["mdns-discovery", "webrtc-production"]
webrtc-transport = ["dep:webrtc"]
webrtc-production = ["dep:webrtc"]
mdns-discovery = ["dep:mdns-sd"]
tls-transport = []

